configuration.properties ekleme yapıldı

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,18 @@ language=
 browser=
 explicit.wait=
 pageLoadTimeout=
+
+firstName=
+lastname=
+email=
+phone=
+postalCode=
+address1=
+address2=
+city=
+guestName=
+orderNumber=
+vatID=
+costCenter=
+reference=
+
