--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-URL=
-language=
-browser=
-explicit.wait=
-pageLoadTimeout=
+URL=https://www.hotel-castle-rastatt.de/
+language=en
+browser=chrome
+explicit.wait=10
+pageLoadTimeout=20
