Runner class and extent.properties updated.@RegressionTest,@SmokeTest hashtag added

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,11 +1,9 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
-
 basefolder.name=Test Reports/TestReport
-basefolder.datetimepattern=d-MMM-YY HH.mm.ss
+basefolder.datetimepattern=dd-MMM-yy_HH.mm.ss
 
-screenshot.dir=test-output/screenshots/
+screenshot.dir=Test Reports/screenshots/
 screenshot.rel.path=../screenshots/
 
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=PdfReport.pdf
+extent.reporter.pdf.out=Test Reports/PdfReport/PdfReport.pdf
